app/assets/stylesheets/application.css.scss
//= require codemirror

@import "font-awesome";
@import "bootstrap";
@import "sb-admin";
@import "plugins/morris.css";

@font-face {
  font-family: 'Glyphicons Halflings';
  src: url('../assets/glyphicons-halflings-regular.eot');
  src: url('../assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), 
       url('../assets/glyphicons-halflings-regular.woff') format('woff'), 
       url('../assets/glyphicons-halflings-regular.ttf') format('truetype'), 
       url('../assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
}

#wrapper.wrapper-lp {
	padding: 0px;
	position: relative;
	height: auto !important; 
  min-height: 100%; 
}

#page-wrapper {
  min-height: 580px;
}

.thumb-box {
	height: 180px; 
	overflow: hidden;
}

CodeMirror {
  border: 1px solid #eee;
  height: auto;
}

